--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@vercel/node": "^2.10.3",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tw-merge": "^0.0.1-alpha.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.19.1",
